# wardenclyffe

./: Android.bp  Cargo.toml  build.rs  cbindgen.toml  wardenclyffe.rc
android/: socket.cpp  socket.h
android/video/: h264.cpp  mjpeg.cpp  video.cpp  video.h
html/: index.html
html/h264/: index.html  worker.js
html/jpeg/: index.html  worker.js
include/wardenclyffe/: wardenclyffe.h
src/: cli.rs  config.rs  ffi.rs  lib.rs  server.rs  tls.rs
