[package]
name = "wardenclyffe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.69"
futures-util = "0.3.26"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.25.0", features = ["full"] }
tungstenite = "0.18.0"
tokio-tungstenite = "0.18.0"

hyper = { version = "0.14.24", features = ["http1", "http2", "server", "tcp"] }
rustls = { version = "0.20.1", features = ["tls12"] }
rustls-pemfile = "1.0.2"
tokio-rustls = "0.23"
hyper-rustls = { version = "0.23.2", features = ["http2"] }
rcgen = "0.10.0"

include_dir = "0.7.3"

clap = { version = "4.1.7", features = ["derive"] }

[build-dependencies]
cbindgen = "0.20.0"
